--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyecto-fetch",
+  "name": "curriculum-vitae",
   "version": "0.1.1",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "core-js": "^3.6.5",
+    "firebase": "^9.8.1",
     "normalize-scss": "^7.0.1",
     "pinia": "^2.0.14",
     "vue": "^3.0.0",
